Make compatible with npm 3+ on Windows

--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -1,6 +1,11 @@
 {
   "name": "<%= answers['application:name'] %>",
   "version": "0.1.0",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/<username>/<%= answers['application:name'] %>.git"
+  },
   "main": "app.js",
   "dependencies": {
     "sails-hook-cron": "*"
