--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -8,7 +8,10 @@
   },
   "main": "app.js",
   "dependencies": {
-    "sails-hook-cron": "*"
+    "passport-jwt": "^1.1.1",
+    "sails-auth": "^1.3.1",
+    "sails-hook-cron": "*",
+    "sails-permissions": "^1.4.2"
   },
   "devDependencies": {
     "chai": "^3.2.0",
