--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -1,17 +1,19 @@
 {
   "name": "<%= answers['application:name'] %>",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/<username>/<%= answers['application:name'] %>.git"
+    "url": "https://github.com/synergycns/<%= answers['application:name'] %>.git"
   },
   "main": "app.js",
   "dependencies": {
+    "passport": "^0.3.0",
+    "passport-facebook-token": "^2.3.0",
+    "passport-local": "^1.0.0",
     "passport-jwt": "^1.1.1",
-    "sails-auth": "^1.3.1",
-    "sails-hook-cron": "*",
-    "sails-permissions": "^1.4.2"
+    "passport-twitter-token": "^0.1.5",
+    "sails-hook-cron": "*"
   },
   "devDependencies": {
     "chai": "^3.2.0",
